--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ services:
   - docker
 
 before_install:
-  - docker build antimofeev/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t antimofeev/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -t antimofeev/react-test npm run test -- --coverage
+  - docker run antimofeev/react-test npm run test -- --coverage
 
 after_success:
   - docker build -t antimofeev/multi-client ./client
